--- a/github basic.htm
+++ b/github basic.htm
@@ -11,5 +11,7 @@
     <address>git add .(or files name/file name)</address>
     <h3>Check whether staged or not</h3>
     <address>git status</address>
+    <h3>Git commit</h3>
+    <address>git commit -m "message"</address>
   </body>
 </html>
