--- a/github basic.htm
+++ b/github basic.htm
@@ -13,5 +13,11 @@
     <address>git status</address>
     <h3>Git commit</h3>
     <address>git commit -m "message"</address>
+    <h3>Creating new branch</h3>
+    <address>git branch branchname</address>
+    <h3>List of creatd branches</h3>
+    <address>git branch</address>
+    <h3>Switch between branches</h3>
+    <address>git checkout newbranch</address>
   </body>
 </html>
